# gdg-rust

./: .dockerignore  .env.docker.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.wasm  README.md  docker-compose.yml
.github/: SECURITY.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  deploy-pages.yml
crates/grid-render/: Cargo.toml
crates/grid-render/src/: canvas.rs  font_metrics.rs  hit_test.rs  lib.rs  types.rs
crates/grid-render/src/render/: cells.rs  draw_utils.rs  header.rs  lines.rs  mod.rs
demo/: bundle.js  index.html  main.js
demo/src/: event-bus.ts  grid-bridge.ts  input-handler-keyboard.ts  input-handler-mouse.ts  input-handler.ts  main.ts  scrollbar.ts
mydocs/orders/: 20260414.md  20260415.md
mydocs/plans/: task_m100_1.md  task_m100_1_impl.md  task_m100_2.md  task_m100_2_impl.md  task_m100_3.md  task_m100_3_impl.md
mydocs/report/: task_m100_1_report.md  task_m100_2_report.md  task_m100_3_report.md
mydocs/working/: task_m100_1_stage1.md  task_m100_1_stage2.md  task_m100_1_stage3.md  task_m100_2_stage1.md  task_m100_2_stage2.md  task_m100_2_stage3.md  task_m100_3_stage1.md  task_m100_3_stage2.md  task_m100_3_stage3.md  task_m100_3_stage4.md  task_m100_3_stage5.md  task_m100_3_stage6.md  task_m100_3_stage7.md
