[package]
name = "grid-render"
version = "0.1.0"
edition = "2021"
description = "Rust/WASM grid rendering engine - POC for glide-data-grid"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"

[dependencies.web-sys]
version = "0.3"
features = [
    "CanvasRenderingContext2d",
    "HtmlCanvasElement",
    "TextMetrics",
    "console",
]

[dev-dependencies]
wasm-bindgen-test = "0.3"
